Using a tweaked node-dbus-next dependency version

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "docs:api": "jsdoc2md --template docs/templates/api.hbs --example-lang js --heading-depth 2 src/*.js > docs/api.md"
   },
   "dependencies": {
-    "dbus-next": "^0.10.2"
+    "dbus-next": "git+https://github.com/tuxedoxt/node-dbus-next.git#match-count-logic-fix"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
